[package]
name = "plink"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
log = "0.4"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.0"
urlencoding = "2.0"
env_logger = "0.11"
rayon = "1.10.0"
clap = { version = "4.5.39", features = ["derive"] }

