[package]
name = "plink"
version = "0.2.3"
edition = "2024"

[dependencies]
anyhow = "1.0"
log = "0.4"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.0"
urlencoding = "2.0"
env_logger = "0.11"
rayon = "1.10.0"
clap = { version = "4.5.39", features = ["derive"] }
bitcode = { version = "0.6.6", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
bincode = { version = "2.0.1", features = ["serde"] }
phf = { version = "0.13.1", features = ["macros", "serde"] }
tsify = "0.5.6"

[build-dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
phf = { version = "0.13.1", features = ["macros", "serde"] }
lazy-regex = "3.4.2"
quote = "1.0.42"
proc-macro2 = "1.0.103"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
bitcode     = { version = "0.6.6", features = ["serde"] }
